--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Blogging Like a Hacker
+title: ML&RR
 ---
-<h2>{{Hello ML}}</h2>
+<h2>{{Hello, this is a demo of learning jekyll}}</h2>
