Update the title and introduction

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: ML&RR
+title: ML67
 ---
-<h2>{{Hello, this is a demo of learning jekyll}}</h2>
+<h2>{{Hello, this is a  blog of learning Mathematical and Machine Learning agrorithm}}</h2>
